--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     height: 50vh;
     float: right;
 }
-.imagesize{ height:50vh ; 
-    width: 40%; float: left;margin-left: 5%; margin-top: 2%;}
+.imagesize{ 
+   width: 100%; float: left;margin-left: 0%; margin-top: 2%; ;}
+   
 
 
